Ensure that changing themes should work on Windows when system high contrast mode is enabled. Fixes #6954

--- a/web/pgadmin/static/css/pgadmin.css
+++ b/web/pgadmin/static/css/pgadmin.css
@@ -46,3 +46,9 @@
   line-height: 1;
   -webkit-font-smoothing: antialiased;
 }
+
+@media screen and (forced-colors: active) {
+  body {
+    forced-color-adjust: none !important;
+  }
+}
